admission/validatingAdmissionPolicies/policies/seccomp-profile/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-pod-namespace-optout-warn-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 6659cce8-c19d-55e5-9051-4b2da4b8b5b8
  labels:
    pss.security.kolteq.com/warn: 'baseline - restricted'
    seccomp-profile-pod.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    seccomp-profile-pod.security.kolteq.com/audit: 'false - true'
    seccomp-profile-pod.security.kolteq.com/enforce: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: seccomp-profile-pod
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: seccomp-profile-pod.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-pod-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 6659cce8-c19d-55e5-9051-4b2da4b8b5b8
  labels:
    seccomp-profile-pod.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/warn: enabled
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    seccomp-profile-pod.security.kolteq.com/audit: 'false - true'
    seccomp-profile-pod.security.kolteq.com/enforce: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: seccomp-profile-pod
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: seccomp-profile-pod.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-pod-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 6659cce8-c19d-55e5-9051-4b2da4b8b5b8
  labels:
    seccomp-profile-pod.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    seccomp-profile-pod.security.kolteq.com/audit: 'false - true'
    seccomp-profile-pod.security.kolteq.com/enforce: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: seccomp-profile-pod
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: seccomp-profile-pod.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-pod-namespace-optout-audit-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 6659cce8-c19d-55e5-9051-4b2da4b8b5b8
  labels:
    pss.security.kolteq.com/audit: 'baseline - restricted'
    seccomp-profile-pod.security.kolteq.com/audit: 'false - true'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    seccomp-profile-pod.security.kolteq.com/enforce: 'false - true'
    seccomp-profile-pod.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: seccomp-profile-pod
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: seccomp-profile-pod.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-pod-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 6659cce8-c19d-55e5-9051-4b2da4b8b5b8
  labels:
    seccomp-profile-pod.security.kolteq.com/audit: 'false - true'
    security.kolteq.com/audit: enabled
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    seccomp-profile-pod.security.kolteq.com/enforce: 'false - true'
    seccomp-profile-pod.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: seccomp-profile-pod
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: seccomp-profile-pod.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-pod-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 6659cce8-c19d-55e5-9051-4b2da4b8b5b8
  labels:
    seccomp-profile-pod.security.kolteq.com/audit: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    seccomp-profile-pod.security.kolteq.com/enforce: 'false - true'
    seccomp-profile-pod.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: seccomp-profile-pod
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: seccomp-profile-pod.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-pod-namespace-optout-deny-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 6659cce8-c19d-55e5-9051-4b2da4b8b5b8
  labels:
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    seccomp-profile-pod.security.kolteq.com/enforce: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    seccomp-profile-pod.security.kolteq.com/audit: 'false - true'
    seccomp-profile-pod.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: seccomp-profile-pod
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: seccomp-profile-pod.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-pod-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 6659cce8-c19d-55e5-9051-4b2da4b8b5b8
  labels:
    seccomp-profile-pod.security.kolteq.com/enforce: 'false - true'
    security.kolteq.com/enforce: enabled
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    seccomp-profile-pod.security.kolteq.com/audit: 'false - true'
    seccomp-profile-pod.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: seccomp-profile-pod
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: seccomp-profile-pod.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: seccomp-profile-pod-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 6659cce8-c19d-55e5-9051-4b2da4b8b5b8
  labels:
    seccomp-profile-pod.security.kolteq.com/enforce: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    seccomp-profile-pod.security.kolteq.com/audit: 'false - true'
    seccomp-profile-pod.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: seccomp-profile-pod
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: seccomp-profile-pod.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
